updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Retail Specialist looking to learn the skills for a career I'm passionate about.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Cedar Point, NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Exercise, video games, reading, sleeping</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Co-owning a Web Development business and working remotely so I can travel all over the world.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Cary, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love the challenges and attention to detail it requires. The sense of accomplishment you get when you create something or solve a problem is delicious.</p>
     </section>
 
     <footer id="footer">
